--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ greenlet==3.2.2
 h11==0.16.0
 htbuilder==0.9.0
 idna==3.10
+imbalanced-learn==0.13.0
 importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==9.2.0
@@ -121,6 +122,7 @@ scipy==1.15.3
 seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
+sklearn-compat==0.1.3
 smmap==5.0.2
 sniffio==1.3.1
 snowflake-connector-python==3.15.0
